--- a/src/NameList.css
+++ b/src/NameList.css
@@ -21,35 +21,53 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
-    border: slategrey 2px solid;
-    background-color: rgba(245, 245, 191, 0.849);
+    border: gray solid 4px;
+    border-radius: 5px;
+    background-color: blanchedalmond;
 }
 .form-group{
-    padding-top: 25px;
+    padding: 15px;
 }
 
 .submitButton{
     float: right;
     padding: 15px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
-input{
+/* input{
     margin-top: 10px;
-}
+} */
 
 .centeralign{
-    padding: 20px;
+    /* padding: 10px; */
     text-align: center;
+    color: gray;
+
 }
-.row{
+.aligncenter{
+    text-align: center;
+    color: red;
+    font-weight: bold;
+
+
+}
+.usernameclass{
+    font-weight: bolder;
+    font-size:x-large;
+}
+/* .row{
     padding: 10px;
     margin: 5px;
-}
+} */
 
 .namesList{
     height: 60vh;
     overflow-y:  scroll;   
+    background-color: blanchedalmond;
+    border: gray solid 2px;
+    border-radius: 4px;
+    color: rgb(78, 78, 78);
 }
 span{
     padding: 5px ;
@@ -58,3 +76,56 @@ span{
 .floatright{
     float: right;
 }
+.contactdetails{
+    border-bottom:1px solid gray;
+}
+
+.mypage{
+    opacity: 1;
+}
+.mypagedis{
+    opacity: 0.5;
+}
+.navbar-nav{
+    width: 100%;
+    display: inline-block;
+}
+.nav-item{
+    display: inline-block;
+    margin: 5px;
+    color: white;
+}
+.logInpage{
+
+    background-image: url('img/bkimg.jpg');
+    position: relative;
+    background-size: cover;
+    width: 100%;
+    height: 90vh;
+    margin: 0%;
+
+}
+
+.loginContainer{
+    /* height: 90%; */
+    margin: 20px;
+    position: absolute;
+    right: 0;
+    background-color: white;
+    border: gray solid 2px;
+    border-radius: 4px;
+    padding-bottom: 20px;
+}
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+  }
+  
+  img.avatar {
+    max-width: 150px;
+    border-radius: 50%;
+  }
+  label.fs-4{
+      padding-top: 10px;
+      padding-bottom: 5px;
+  }
